View Issue Details

IDProjectCategoryView StatusLast Update
0028376Open CASCADEOCCT:Visualizationpublic2017-09-29 16:25
Reporterkgv Assigned Toapn  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.1.0 
Target Version7.2.0Fixed in Version7.2.0 
Summary0028376: Visualization, AIS_ColoredShape - fix endless recursion due to misprint
DescriptionAIS_ColoredShape.cxx contains the following code leading to endless recursion due to misprint:
  //! Collect all sub-compounds into map.
  static void collectSubCompounds (TopTools_MapOfShape& theMap,
                                   const TopoDS_Shape&  theShape)
  {
    for (TopoDS_Iterator aChildIter (theShape); aChildIter.More(); aChildIter.Next())
    {
      const TopoDS_Shape& aShape = aChildIter.Value();
      if (aShape.ShapeType() == TopAbs_COMPOUND
       && theMap.Add (aShape))
      {
        collectSubCompounds (theMap, theShape); //!!!!< theShape  !!!
      }
    }
  }
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Relationships

child of 0028036 closedabv Visualization, AIS_ColoredShape - handle correctly nested compounds within Shaded display mode 

Activities

git

2017-01-19 19:30

administrator   ~0062819

Branch CR28376 has been created by kgv.

SHA-1: 169f9a6da7811123a9b95886660f20a252447f67


Detailed log of new commits:

Author: kgv
Date: Thu Jan 19 19:29:59 2017 +0300

    0028376: Visualization, AIS_ColoredShape - fix endless recursion due to misprint

kgv

2017-01-19 19:30

developer   ~0062820

Patch is ready for review.

san

2017-01-27 20:06

developer   ~0063158

Branch CR28376 reviewed without remarks, ready for testing.

git

2017-01-31 15:45

administrator   ~0063267

Branch CR28376 has been updated forcibly by mkv.

SHA-1: f48eacf611f4631fcf3e335ba258a91ce26020e6

mkv

2017-02-01 20:23

tester   ~0063327

Dear BugMaster,
Branch CR28376 was rebased on current master of occt git-repository.
SHA-1: f48eacf611f4631fcf3e335ba258a91ce26020e6

mkv

2017-02-01 20:24

tester   ~0063328

Dear BugMaster,
Branch CR28376 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested on Release mode.
SHA-1: f48eacf611f4631fcf3e335ba258a91ce26020e6

Number of compiler warnings:

occt component :
Linux: 0 (0 on master)
Windows: 0 (0 on master)
MacOS : 0 (0 on master)

products component :
Linux: 63 (63 on master)
Windows: 0 (0 on master)
MacOS : 1136

Regressions/Differences/Improvements:
No regressions/differences

Testing cases:
Not needed

Testing on Linux:
occt component :
Total MEMORY difference: 92488479 / 92305255 [+0.20%]
Total CPU difference: 19927.590000000175 / 19914.260000000217 [+0.07%]
products component :
Total MEMORY difference: 31487443 / 31477908 [+0.03%]
Total CPU difference: 5602.429999999973 / 5544.959999999981 [+1.04%]

Testing on Windows:
occt component :
Total MEMORY difference: 57620728 / 57618048 [+0.00%]
Total CPU difference: 18299.71290509857 / 18683.178963198647 [-2.05%]
products component :
Total MEMORY difference: 22659009 / 22621210 [+0.17%]
Total CPU difference: 5626.737668599997 / 5570.546108399986 [+1.01%]

There are no differences in images found by testdiff.

mkv

2017-02-01 20:24

tester   ~0063329

Dear BugMaster,
Branch CR28376 is TESTED.

git

2017-02-08 11:36

administrator   ~0063622

Branch CR28376 has been deleted by kgv.

SHA-1: f48eacf611f4631fcf3e335ba258a91ce26020e6

Related Changesets

occt: master 478ad1d1

2017-01-19 16:29:59

kgv


Committer: apn Details Diff
0028376: Visualization, AIS_ColoredShape - fix endless recursion due to misprint Affected Issues
0028376
mod - src/AIS/AIS_ColoredShape.cxx Diff File

Issue History

Date Modified Username Field Change
2017-01-19 19:27 kgv New Issue
2017-01-19 19:27 kgv Assigned To => kgv
2017-01-19 19:30 git Note Added: 0062819
2017-01-19 19:30 kgv Note Added: 0062820
2017-01-19 19:30 kgv Assigned To kgv => san
2017-01-19 19:30 kgv Severity minor => trivial
2017-01-19 19:30 kgv Status new => resolved
2017-01-19 19:30 kgv Relationship added child of 0028036
2017-01-27 20:06 san Note Added: 0063158
2017-01-27 20:06 san Assigned To san => bugmaster
2017-01-27 20:06 san Status resolved => reviewed
2017-01-30 12:17 apv Assigned To bugmaster => apv
2017-01-30 19:00 apv Assigned To apv => mkv
2017-01-31 15:45 git Note Added: 0063267
2017-02-01 20:23 mkv Note Added: 0063327
2017-02-01 20:24 mkv Note Added: 0063328
2017-02-01 20:24 mkv Note Added: 0063329
2017-02-01 20:24 mkv Assigned To mkv => bugmaster
2017-02-01 20:24 mkv Status reviewed => tested
2017-02-01 20:24 mkv Test case number => Not needed
2017-02-03 16:52 apn Changeset attached => occt master 478ad1d1
2017-02-03 16:52 apn Assigned To bugmaster => apn
2017-02-03 16:52 apn Status tested => verified
2017-02-03 16:52 apn Resolution open => fixed
2017-02-08 11:36 git Note Added: 0063622
2017-03-03 17:41 bugmaster Target Version 7.3.0 => 7.2.0
2017-03-03 17:44 kgv Target Version 7.2.0 => 7.3.0
2017-05-19 15:36 abv Target Version 7.3.0 => 7.2.0
2017-09-29 16:18 aiv Fixed in Version => 7.2.0
2017-09-29 16:25 aiv Status verified => closed