0028376: Visualization, AIS_ColoredShape - fix endless recursion due to misprint